--- a/App/main.css
+++ b/App/main.css
@@ -11,6 +11,10 @@ body{
     background-color: #DFEFD1;
 }
 
+h1{
+    font-size: 30px;
+}
+
 .header{
     padding: 12px 24px;
     display: flex;
@@ -34,10 +38,25 @@ body{
     margin-left: 12px;
 }
 
-main{
+.main{
     padding-top: 120px;
-    max-width: 652px;
+    max-width: 1024px;
     margin: 0 auto;
+}
+
+.main__header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.searchContainer{
+    display: flex;
+    align-items: center;
+}
+
+.searchContainer .searchbar{
+    margin-left: 12px;
 }
 
 .searchbar{
@@ -48,7 +67,6 @@ main{
     align-items: center;
     justify-content: space-between;
     padding: 24px;
-    margin-bottom: 40px;
     border: 1px solid #99A194;
     background-color: white;
 }
@@ -77,6 +95,7 @@ main{
 .product_container{
     display: flex;
     flex-wrap: wrap;
+    margin-top: 40px;
 }
 
 .product{
@@ -155,7 +174,6 @@ main{
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    min-width: 132px;
     padding: 8px 12px;
 }
 
@@ -181,4 +199,24 @@ main{
 
 .btn--danger:hover{
     background-color: #9e3e50;
+}
+
+.detail-container{
+    margin-top: 16px;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 1px 2px 2px #A7B49D;
+    padding: 24px;
+}
+
+.detail-container *+*{
+    margin-top: 12px;
+}
+
+.detail-name{
+    font-size: 18px;
+}
+.detail-value{
+    font-size: 16px;
+    color: #6b6768d7;
 }
