--- a/GroceryOrderingApp/Views/Home/EditCustomer.cshtml
+++ b/GroceryOrderingApp/Views/Home/EditCustomer.cshtml
@@ -7,9 +7,9 @@
 
 <div class="w-50">
     <form method="post">
-        <input asp-for="CUSTOMER_ID" type="hidden" class="disabled form-control"/>
-        <input asp-for="CUSTOMER_NAME" class="form-control" />
-        <input asp-for="EMAIL" class="form-control" />
+        <input asp-for="CUSTOMER_ID" type="hidden" class="disabled form-control mb-2"/>
+        <input asp-for="CUSTOMER_NAME" class="form-control mb-2" />
+        <input asp-for="EMAIL" class="form-control mb-2" />
         <button type="submit" class="btn btn-primary w-25">Update</button>
     </form>
 </div>
